<resources>
    <string name="app_name">TP10</string>
    <string name="clear">CLEAR</string>
    <string name="pop">POP</string>
    <string name="swap">SWAP</string>
    <string name="enter">ENTER</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">/</string>
    <string name="inputIsEmpty">Le champ de saisie ne doit pas être vide</string>
    <string name="stackAlreadyEmpty">La pile est déja vide !</string>
    <string name="stackIsEmpty">La pile ne doit pas être vide pour effectuer cette opération</string>
    <string name="stackMustHaveAtLeastTwoValues">La pile doit contenir au moin 2 valeurs</string>
    <string name="divideByZeroError">Impossible de diviser par zero !</string>
</resources>
