<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#E78305"
    tools:context="com.example.admin.tp10.ActivityMain">

    <TextView
        android:id="@+id/textStack4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:background="#F89406"
        android:gravity="center|start"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:textColor="#000000"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textStack3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:background="#F89406"
        android:gravity="center|start"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:textColor="#000000"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textStack2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:background="#F89406"
        android:gravity="center|start"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:textColor="#000000"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textStack1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:background="#F89406"
        android:gravity="center|start"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:textColor="#000000"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:background="#4B77BE"
        android:drawableStart="@android:drawable/ic_menu_edit"
        android:drawableLeft="@android:drawable/ic_menu_edit"
        android:gravity="center|start"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:textColor="#CCCCCC"
        android:textSize="28sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="2"
            android:background="#59ABE3"
            android:text="@string/_1"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:onClick="onClick1"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#59ABE3"
            android:text="@string/_2"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:onClick="onClick2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="2"
            android:background="#59ABE3"
            android:text="@string/_3"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:onClick="onClick3"/>

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#EC644B"
            android:text="@string/plus"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:onClick="onClickPlus"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="2"
            android:background="#59ABE3"
            android:text="@string/_4"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:onClick="onClick4"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#59ABE3"
            android:text="@string/_5"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:onClick="onClick5"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="2"
            android:background="#59ABE3"
            android:text="@string/_6"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:onClick="onClick6"/>

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#EC644B"
            android:text="@string/minus"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:onClick="onClickMinus"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="2"
            android:background="#59ABE3"
            android:text="@string/_7"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:onClick="onClick7"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#59ABE3"
            android:text="@string/_8"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:onClick="onClick8"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="2"
            android:background="#59ABE3"
            android:text="@string/_9"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:onClick="onClick9"/>

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#EC644B"
            android:text="@string/divide"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:onClick="onClickDivide"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="2"
            android:background="#EC644B"
            android:text="@string/clear"
            android:textColor="#ffffff"
            android:textSize="26sp"
            android:onClick="onClickClear"/>

        <Button
            android:id="@+id/buttonPop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#EC644B"
            android:text="@string/pop"
            android:textColor="#ffffff"
            android:textSize="26sp"
            android:onClick="onClickPop"/>

        <Button
            android:id="@+id/buttonSwap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="2"
            android:background="#EC644B"
            android:text="@string/swap"
            android:textColor="#ffffff"
            android:textSize="26sp"
            android:onClick="onClickSwap"/>

        <Button
            android:id="@+id/buttonEnter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#96281B"
            android:text="@string/enter"
            android:textColor="#ffffff"
            android:textSize="26sp"
            android:onClick="onClickEnter"/>
    </LinearLayout>

</android.widget.LinearLayout>